Projects/Lab_04/src/parser/y.output
   0  $accept : program $end

   1  program : opt_def_glob_var main

   2  glob_def : var_def
   3           | struct_def
   4           | func_def

   5  opt_def_glob_var : opt_def_glob_var glob_def
   6                   |

   7  var_def : p_type list_ident ';'
   8          | array list_ident ';'

   9  local_var_def : var_def
  10                | struct_def

  11  opt_list_local_var : opt_list_local_var local_var_def

  12  opt_list_fields : opt_list_fields type list_ident ';'

  13  struct_def : STRUCT '{' opt_list_fields '}' list_ident ';'

  14  main : VOID MAIN '(' ')' '{' opt_list_local_var opt_statements '}'

  15  func_def : ID p_type '(' opt_list_param ')' '{' opt_list_local_var opt_statements '}'
  16           | ID VOID '(' opt_list_param ')' '{' opt_list_local_var opt_statements '}'

  17  param : p_type ID

  18  list_param : list_param ',' param
  19             | param

  20  opt_list_param : list_param
  21                 |

  22  p_type : INT
  23         | DOUBLE
  24         | CHAR

  25  array : type '[' INT_CONSTANT ']'

  26  type : p_type
  27       | array

  28  list_ident : list_ident ',' ID
  29             | ID

  30  opt_statements :
  31                 | opt_statements statement

  32  statement : RETURN '(' exp ')' ';'
  33            | READ '(' list_exp ')' ';'
  34            | WRITE '(' list_exp ')' ';'
  35            | IF '(' exp ')' '{' opt_statements '}'
  36            | IF '(' exp ')' '{' opt_statements '}' ELSE '{' opt_statements '}'
  37            | while
  38            | exp '=' exp ';'
  39            | ID '(' opt_list_exp ')' ';'

  40  while : WHILE '(' exp ')' '{' opt_statements '}'
  41        | WHILE '(' exp ')' statement

  42  opt_list_exp :
  43               | list_exp

  44  list_exp : list_exp ',' exp
  45           | exp

  46  exp : exp '+' exp
  47      | exp '*' exp
  48      | exp '/' exp
  49      | exp '-' exp
  50      | exp '%' exp
  51      | exp EQ exp
  52      | exp NOT_EQ exp
  53      | exp '>' exp
  54      | exp '<' exp
  55      | exp L_EQ exp
  56      | exp G_EQ exp
  57      | exp AND exp
  58      | exp OR exp
  59      | exp '!' exp
  60      | '(' p_type ')' exp
  61      | exp '[' exp ']'
  62      | exp '.' ID
  63      | ID '(' opt_list_exp ')'
  64      | '-' exp
  65      | '(' exp ')'
  66      | INT_CONSTANT
  67      | ID
  68      | CHAR_CONSTANT
  69      | REAL_CONSTANT

state 0
	$accept : . program $end  (0)
	opt_def_glob_var : .  (6)

	.  reduce 6

	program  goto 1
	opt_def_glob_var  goto 2


state 1
	$accept : program . $end  (0)

	$end  accept


state 2
	program : opt_def_glob_var . main  (1)
	opt_def_glob_var : opt_def_glob_var . glob_def  (5)

	VOID  shift 3
	ID  shift 4
	DOUBLE  shift 5
	CHAR  shift 6
	STRUCT  shift 7
	INT  shift 8
	.  error

	main  goto 9
	glob_def  goto 10
	var_def  goto 11
	struct_def  goto 12
	func_def  goto 13
	p_type  goto 14
	array  goto 15
	type  goto 16


state 3
	main : VOID . MAIN '(' ')' '{' opt_list_local_var opt_statements '}'  (14)

	MAIN  shift 17
	.  error


state 4
	func_def : ID . p_type '(' opt_list_param ')' '{' opt_list_local_var opt_statements '}'  (15)
	func_def : ID . VOID '(' opt_list_param ')' '{' opt_list_local_var opt_statements '}'  (16)

	VOID  shift 18
	DOUBLE  shift 5
	CHAR  shift 6
	INT  shift 8
	.  error

	p_type  goto 19


state 5
	p_type : DOUBLE .  (23)

	.  reduce 23


state 6
	p_type : CHAR .  (24)

	.  reduce 24


state 7
	struct_def : STRUCT . '{' opt_list_fields '}' list_ident ';'  (13)

	'{'  shift 20
	.  error


state 8
	p_type : INT .  (22)

	.  reduce 22


state 9
	program : opt_def_glob_var main .  (1)

	.  reduce 1


state 10
	opt_def_glob_var : opt_def_glob_var glob_def .  (5)

	.  reduce 5


state 11
	glob_def : var_def .  (2)

	.  reduce 2


state 12
	glob_def : struct_def .  (3)

	.  reduce 3


state 13
	glob_def : func_def .  (4)

	.  reduce 4


state 14
	var_def : p_type . list_ident ';'  (7)
	type : p_type .  (26)

	ID  shift 21
	'['  reduce 26

	list_ident  goto 22


state 15
	var_def : array . list_ident ';'  (8)
	type : array .  (27)

	ID  shift 21
	'['  reduce 27

	list_ident  goto 23


state 16
	array : type . '[' INT_CONSTANT ']'  (25)

	'['  shift 24
	.  error


state 17
	main : VOID MAIN . '(' ')' '{' opt_list_local_var opt_statements '}'  (14)

	'('  shift 25
	.  error


state 18
	func_def : ID VOID . '(' opt_list_param ')' '{' opt_list_local_var opt_statements '}'  (16)

	'('  shift 26
	.  error


state 19
	func_def : ID p_type . '(' opt_list_param ')' '{' opt_list_local_var opt_statements '}'  (15)

	'('  shift 27
	.  error


state 20
	struct_def : STRUCT '{' . opt_list_fields '}' list_ident ';'  (13)


	opt_list_fields  goto 28


state 21
	list_ident : ID .  (29)

	.  reduce 29


state 22
	var_def : p_type list_ident . ';'  (7)
	list_ident : list_ident . ',' ID  (28)

	';'  shift 29
	','  shift 30
	.  error


state 23
	var_def : array list_ident . ';'  (8)
	list_ident : list_ident . ',' ID  (28)

	';'  shift 31
	','  shift 30
	.  error


state 24
	array : type '[' . INT_CONSTANT ']'  (25)

	INT_CONSTANT  shift 32
	.  error


state 25
	main : VOID MAIN '(' . ')' '{' opt_list_local_var opt_statements '}'  (14)

	')'  shift 33
	.  error


state 26
	func_def : ID VOID '(' . opt_list_param ')' '{' opt_list_local_var opt_statements '}'  (16)
	opt_list_param : .  (21)

	DOUBLE  shift 5
	CHAR  shift 6
	INT  shift 8
	')'  reduce 21

	p_type  goto 34
	opt_list_param  goto 35
	param  goto 36
	list_param  goto 37


state 27
	func_def : ID p_type '(' . opt_list_param ')' '{' opt_list_local_var opt_statements '}'  (15)
	opt_list_param : .  (21)

	DOUBLE  shift 5
	CHAR  shift 6
	INT  shift 8
	')'  reduce 21

	p_type  goto 34
	opt_list_param  goto 38
	param  goto 36
	list_param  goto 37


state 28
	opt_list_fields : opt_list_fields . type list_ident ';'  (12)
	struct_def : STRUCT '{' opt_list_fields . '}' list_ident ';'  (13)

	DOUBLE  shift 5
	CHAR  shift 6
	INT  shift 8
	'}'  shift 39
	.  error

	p_type  goto 40
	array  goto 41
	type  goto 42


state 29
	var_def : p_type list_ident ';' .  (7)

	.  reduce 7


state 30
	list_ident : list_ident ',' . ID  (28)

	ID  shift 43
	.  error


state 31
	var_def : array list_ident ';' .  (8)

	.  reduce 8


state 32
	array : type '[' INT_CONSTANT . ']'  (25)

	']'  shift 44
	.  error


state 33
	main : VOID MAIN '(' ')' . '{' opt_list_local_var opt_statements '}'  (14)

	'{'  shift 45
	.  error


state 34
	param : p_type . ID  (17)

	ID  shift 46
	.  error


state 35
	func_def : ID VOID '(' opt_list_param . ')' '{' opt_list_local_var opt_statements '}'  (16)

	')'  shift 47
	.  error


state 36
	list_param : param .  (19)

	.  reduce 19


state 37
	list_param : list_param . ',' param  (18)
	opt_list_param : list_param .  (20)

	','  shift 48
	')'  reduce 20


state 38
	func_def : ID p_type '(' opt_list_param . ')' '{' opt_list_local_var opt_statements '}'  (15)

	')'  shift 49
	.  error


state 39
	struct_def : STRUCT '{' opt_list_fields '}' . list_ident ';'  (13)

	ID  shift 21
	.  error

	list_ident  goto 50


state 40
	type : p_type .  (26)

	.  reduce 26


state 41
	type : array .  (27)

	.  reduce 27


state 42
	opt_list_fields : opt_list_fields type . list_ident ';'  (12)
	array : type . '[' INT_CONSTANT ']'  (25)

	ID  shift 21
	'['  shift 24
	.  error

	list_ident  goto 51


state 43
	list_ident : list_ident ',' ID .  (28)

	.  reduce 28


state 44
	array : type '[' INT_CONSTANT ']' .  (25)

	.  reduce 25


state 45
	main : VOID MAIN '(' ')' '{' . opt_list_local_var opt_statements '}'  (14)


	opt_list_local_var  goto 52


state 46
	param : p_type ID .  (17)

	.  reduce 17


state 47
	func_def : ID VOID '(' opt_list_param ')' . '{' opt_list_local_var opt_statements '}'  (16)

	'{'  shift 53
	.  error


state 48
	list_param : list_param ',' . param  (18)

	DOUBLE  shift 5
	CHAR  shift 6
	INT  shift 8
	.  error

	p_type  goto 34
	param  goto 54


state 49
	func_def : ID p_type '(' opt_list_param ')' . '{' opt_list_local_var opt_statements '}'  (15)

	'{'  shift 55
	.  error


state 50
	struct_def : STRUCT '{' opt_list_fields '}' list_ident . ';'  (13)
	list_ident : list_ident . ',' ID  (28)

	';'  shift 56
	','  shift 30
	.  error


state 51
	opt_list_fields : opt_list_fields type list_ident . ';'  (12)
	list_ident : list_ident . ',' ID  (28)

	';'  shift 57
	','  shift 30
	.  error


state 52
	opt_list_local_var : opt_list_local_var . local_var_def  (11)
	main : VOID MAIN '(' ')' '{' opt_list_local_var . opt_statements '}'  (14)
	opt_statements : .  (30)

	DOUBLE  shift 5
	CHAR  shift 6
	STRUCT  shift 7
	INT  shift 8
	INT_CONSTANT  reduce 30
	REAL_CONSTANT  reduce 30
	RETURN  reduce 30
	ID  reduce 30
	WRITE  reduce 30
	IF  reduce 30
	READ  reduce 30
	WHILE  reduce 30
	CHAR_CONSTANT  reduce 30
	'-'  reduce 30
	'('  reduce 30
	'}'  reduce 30

	var_def  goto 58
	struct_def  goto 59
	p_type  goto 14
	array  goto 15
	local_var_def  goto 60
	type  goto 16
	opt_statements  goto 61


state 53
	func_def : ID VOID '(' opt_list_param ')' '{' . opt_list_local_var opt_statements '}'  (16)


	opt_list_local_var  goto 62


state 54
	list_param : list_param ',' param .  (18)

	.  reduce 18


state 55
	func_def : ID p_type '(' opt_list_param ')' '{' . opt_list_local_var opt_statements '}'  (15)


	opt_list_local_var  goto 63


state 56
	struct_def : STRUCT '{' opt_list_fields '}' list_ident ';' .  (13)

	.  reduce 13


state 57
	opt_list_fields : opt_list_fields type list_ident ';' .  (12)

	.  reduce 12


state 58
	local_var_def : var_def .  (9)

	.  reduce 9


state 59
	local_var_def : struct_def .  (10)

	.  reduce 10


state 60
	opt_list_local_var : opt_list_local_var local_var_def .  (11)

	.  reduce 11


state 61
	main : VOID MAIN '(' ')' '{' opt_list_local_var opt_statements . '}'  (14)
	opt_statements : opt_statements . statement  (31)

	INT_CONSTANT  shift 64
	REAL_CONSTANT  shift 65
	RETURN  shift 66
	ID  shift 67
	WRITE  shift 68
	IF  shift 69
	READ  shift 70
	WHILE  shift 71
	CHAR_CONSTANT  shift 72
	'-'  shift 73
	'('  shift 74
	'}'  shift 75
	.  error

	statement  goto 76
	exp  goto 77
	while  goto 78


state 62
	opt_list_local_var : opt_list_local_var . local_var_def  (11)
	func_def : ID VOID '(' opt_list_param ')' '{' opt_list_local_var . opt_statements '}'  (16)
	opt_statements : .  (30)

	DOUBLE  shift 5
	CHAR  shift 6
	STRUCT  shift 7
	INT  shift 8
	INT_CONSTANT  reduce 30
	REAL_CONSTANT  reduce 30
	RETURN  reduce 30
	ID  reduce 30
	WRITE  reduce 30
	IF  reduce 30
	READ  reduce 30
	WHILE  reduce 30
	CHAR_CONSTANT  reduce 30
	'-'  reduce 30
	'('  reduce 30
	'}'  reduce 30

	var_def  goto 58
	struct_def  goto 59
	p_type  goto 14
	array  goto 15
	local_var_def  goto 60
	type  goto 16
	opt_statements  goto 79


state 63
	opt_list_local_var : opt_list_local_var . local_var_def  (11)
	func_def : ID p_type '(' opt_list_param ')' '{' opt_list_local_var . opt_statements '}'  (15)
	opt_statements : .  (30)

	DOUBLE  shift 5
	CHAR  shift 6
	STRUCT  shift 7
	INT  shift 8
	INT_CONSTANT  reduce 30
	REAL_CONSTANT  reduce 30
	RETURN  reduce 30
	ID  reduce 30
	WRITE  reduce 30
	IF  reduce 30
	READ  reduce 30
	WHILE  reduce 30
	CHAR_CONSTANT  reduce 30
	'-'  reduce 30
	'('  reduce 30
	'}'  reduce 30

	var_def  goto 58
	struct_def  goto 59
	p_type  goto 14
	array  goto 15
	local_var_def  goto 60
	type  goto 16
	opt_statements  goto 80


state 64
	exp : INT_CONSTANT .  (66)

	.  reduce 66


state 65
	exp : REAL_CONSTANT .  (69)

	.  reduce 69


state 66
	statement : RETURN . '(' exp ')' ';'  (32)

	'('  shift 81
	.  error


state 67
	statement : ID . '(' opt_list_exp ')' ';'  (39)
	exp : ID . '(' opt_list_exp ')'  (63)
	exp : ID .  (67)

	'('  shift 82
	EQ  reduce 67
	OR  reduce 67
	AND  reduce 67
	NOT_EQ  reduce 67
	G_EQ  reduce 67
	L_EQ  reduce 67
	'='  reduce 67
	'!'  reduce 67
	'>'  reduce 67
	'<'  reduce 67
	'+'  reduce 67
	'-'  reduce 67
	'*'  reduce 67
	'/'  reduce 67
	'%'  reduce 67
	'['  reduce 67
	'.'  reduce 67


state 68
	statement : WRITE . '(' list_exp ')' ';'  (34)

	'('  shift 83
	.  error


state 69
	statement : IF . '(' exp ')' '{' opt_statements '}'  (35)
	statement : IF . '(' exp ')' '{' opt_statements '}' ELSE '{' opt_statements '}'  (36)

	'('  shift 84
	.  error


state 70
	statement : READ . '(' list_exp ')' ';'  (33)

	'('  shift 85
	.  error


state 71
	while : WHILE . '(' exp ')' '{' opt_statements '}'  (40)
	while : WHILE . '(' exp ')' statement  (41)

	'('  shift 86
	.  error


state 72
	exp : CHAR_CONSTANT .  (68)

	.  reduce 68


state 73
	exp : '-' . exp  (64)

	INT_CONSTANT  shift 64
	REAL_CONSTANT  shift 65
	ID  shift 87
	CHAR_CONSTANT  shift 72
	'-'  shift 73
	'('  shift 74
	.  error

	exp  goto 88


state 74
	exp : '(' . p_type ')' exp  (60)
	exp : '(' . exp ')'  (65)

	INT_CONSTANT  shift 64
	REAL_CONSTANT  shift 65
	ID  shift 87
	DOUBLE  shift 5
	CHAR  shift 6
	INT  shift 8
	CHAR_CONSTANT  shift 72
	'-'  shift 73
	'('  shift 74
	.  error

	p_type  goto 89
	exp  goto 90


state 75
	main : VOID MAIN '(' ')' '{' opt_list_local_var opt_statements '}' .  (14)

	.  reduce 14


state 76
	opt_statements : opt_statements statement .  (31)

	.  reduce 31


state 77
	statement : exp . '=' exp ';'  (38)
	exp : exp . '+' exp  (46)
	exp : exp . '*' exp  (47)
	exp : exp . '/' exp  (48)
	exp : exp . '-' exp  (49)
	exp : exp . '%' exp  (50)
	exp : exp . EQ exp  (51)
	exp : exp . NOT_EQ exp  (52)
	exp : exp . '>' exp  (53)
	exp : exp . '<' exp  (54)
	exp : exp . L_EQ exp  (55)
	exp : exp . G_EQ exp  (56)
	exp : exp . AND exp  (57)
	exp : exp . OR exp  (58)
	exp : exp . '!' exp  (59)
	exp : exp . '[' exp ']'  (61)
	exp : exp . '.' ID  (62)

	EQ  shift 91
	OR  shift 92
	AND  shift 93
	NOT_EQ  shift 94
	G_EQ  shift 95
	L_EQ  shift 96
	'='  shift 97
	'!'  shift 98
	'>'  shift 99
	'<'  shift 100
	'+'  shift 101
	'-'  shift 102
	'*'  shift 103
	'/'  shift 104
	'%'  shift 105
	'['  shift 106
	'.'  shift 107
	.  error


state 78
	statement : while .  (37)

	.  reduce 37


state 79
	func_def : ID VOID '(' opt_list_param ')' '{' opt_list_local_var opt_statements . '}'  (16)
	opt_statements : opt_statements . statement  (31)

	INT_CONSTANT  shift 64
	REAL_CONSTANT  shift 65
	RETURN  shift 66
	ID  shift 67
	WRITE  shift 68
	IF  shift 69
	READ  shift 70
	WHILE  shift 71
	CHAR_CONSTANT  shift 72
	'-'  shift 73
	'('  shift 74
	'}'  shift 108
	.  error

	statement  goto 76
	exp  goto 77
	while  goto 78


state 80
	func_def : ID p_type '(' opt_list_param ')' '{' opt_list_local_var opt_statements . '}'  (15)
	opt_statements : opt_statements . statement  (31)

	INT_CONSTANT  shift 64
	REAL_CONSTANT  shift 65
	RETURN  shift 66
	ID  shift 67
	WRITE  shift 68
	IF  shift 69
	READ  shift 70
	WHILE  shift 71
	CHAR_CONSTANT  shift 72
	'-'  shift 73
	'('  shift 74
	'}'  shift 109
	.  error

	statement  goto 76
	exp  goto 77
	while  goto 78


state 81
	statement : RETURN '(' . exp ')' ';'  (32)

	INT_CONSTANT  shift 64
	REAL_CONSTANT  shift 65
	ID  shift 87
	CHAR_CONSTANT  shift 72
	'-'  shift 73
	'('  shift 74
	.  error

	exp  goto 110


state 82
	statement : ID '(' . opt_list_exp ')' ';'  (39)
	exp : ID '(' . opt_list_exp ')'  (63)
	opt_list_exp : .  (42)

	INT_CONSTANT  shift 64
	REAL_CONSTANT  shift 65
	ID  shift 87
	CHAR_CONSTANT  shift 72
	'-'  shift 73
	'('  shift 74
	')'  reduce 42

	exp  goto 111
	list_exp  goto 112
	opt_list_exp  goto 113


state 83
	statement : WRITE '(' . list_exp ')' ';'  (34)

	INT_CONSTANT  shift 64
	REAL_CONSTANT  shift 65
	ID  shift 87
	CHAR_CONSTANT  shift 72
	'-'  shift 73
	'('  shift 74
	.  error

	exp  goto 111
	list_exp  goto 114


state 84
	statement : IF '(' . exp ')' '{' opt_statements '}'  (35)
	statement : IF '(' . exp ')' '{' opt_statements '}' ELSE '{' opt_statements '}'  (36)

	INT_CONSTANT  shift 64
	REAL_CONSTANT  shift 65
	ID  shift 87
	CHAR_CONSTANT  shift 72
	'-'  shift 73
	'('  shift 74
	.  error

	exp  goto 115


state 85
	statement : READ '(' . list_exp ')' ';'  (33)

	INT_CONSTANT  shift 64
	REAL_CONSTANT  shift 65
	ID  shift 87
	CHAR_CONSTANT  shift 72
	'-'  shift 73
	'('  shift 74
	.  error

	exp  goto 111
	list_exp  goto 116


state 86
	while : WHILE '(' . exp ')' '{' opt_statements '}'  (40)
	while : WHILE '(' . exp ')' statement  (41)

	INT_CONSTANT  shift 64
	REAL_CONSTANT  shift 65
	ID  shift 87
	CHAR_CONSTANT  shift 72
	'-'  shift 73
	'('  shift 74
	.  error

	exp  goto 117


state 87
	exp : ID . '(' opt_list_exp ')'  (63)
	exp : ID .  (67)

	'('  shift 118
	EQ  reduce 67
	OR  reduce 67
	AND  reduce 67
	NOT_EQ  reduce 67
	G_EQ  reduce 67
	L_EQ  reduce 67
	'='  reduce 67
	'!'  reduce 67
	'>'  reduce 67
	'<'  reduce 67
	'+'  reduce 67
	'-'  reduce 67
	'*'  reduce 67
	'/'  reduce 67
	'%'  reduce 67
	'['  reduce 67
	']'  reduce 67
	'.'  reduce 67
	')'  reduce 67
	';'  reduce 67
	','  reduce 67


state 88
	exp : exp . '+' exp  (46)
	exp : exp . '*' exp  (47)
	exp : exp . '/' exp  (48)
	exp : exp . '-' exp  (49)
	exp : exp . '%' exp  (50)
	exp : exp . EQ exp  (51)
	exp : exp . NOT_EQ exp  (52)
	exp : exp . '>' exp  (53)
	exp : exp . '<' exp  (54)
	exp : exp . L_EQ exp  (55)
	exp : exp . G_EQ exp  (56)
	exp : exp . AND exp  (57)
	exp : exp . OR exp  (58)
	exp : exp . '!' exp  (59)
	exp : exp . '[' exp ']'  (61)
	exp : exp . '.' ID  (62)
	exp : '-' exp .  (64)

	'['  shift 106
	'.'  shift 107
	EQ  reduce 64
	OR  reduce 64
	AND  reduce 64
	NOT_EQ  reduce 64
	G_EQ  reduce 64
	L_EQ  reduce 64
	'='  reduce 64
	'!'  reduce 64
	'>'  reduce 64
	'<'  reduce 64
	'+'  reduce 64
	'-'  reduce 64
	'*'  reduce 64
	'/'  reduce 64
	'%'  reduce 64
	']'  reduce 64
	')'  reduce 64
	';'  reduce 64
	','  reduce 64


state 89
	exp : '(' p_type . ')' exp  (60)

	')'  shift 119
	.  error


state 90
	exp : exp . '+' exp  (46)
	exp : exp . '*' exp  (47)
	exp : exp . '/' exp  (48)
	exp : exp . '-' exp  (49)
	exp : exp . '%' exp  (50)
	exp : exp . EQ exp  (51)
	exp : exp . NOT_EQ exp  (52)
	exp : exp . '>' exp  (53)
	exp : exp . '<' exp  (54)
	exp : exp . L_EQ exp  (55)
	exp : exp . G_EQ exp  (56)
	exp : exp . AND exp  (57)
	exp : exp . OR exp  (58)
	exp : exp . '!' exp  (59)
	exp : exp . '[' exp ']'  (61)
	exp : exp . '.' ID  (62)
	exp : '(' exp . ')'  (65)

	EQ  shift 91
	OR  shift 92
	AND  shift 93
	NOT_EQ  shift 94
	G_EQ  shift 95
	L_EQ  shift 96
	'!'  shift 98
	'>'  shift 99
	'<'  shift 100
	'+'  shift 101
	'-'  shift 102
	'*'  shift 103
	'/'  shift 104
	'%'  shift 105
	'['  shift 106
	'.'  shift 107
	')'  shift 120
	.  error


state 91
	exp : exp EQ . exp  (51)

	INT_CONSTANT  shift 64
	REAL_CONSTANT  shift 65
	ID  shift 87
	CHAR_CONSTANT  shift 72
	'-'  shift 73
	'('  shift 74
	.  error

	exp  goto 121


state 92
	exp : exp OR . exp  (58)

	INT_CONSTANT  shift 64
	REAL_CONSTANT  shift 65
	ID  shift 87
	CHAR_CONSTANT  shift 72
	'-'  shift 73
	'('  shift 74
	.  error

	exp  goto 122


state 93
	exp : exp AND . exp  (57)

	INT_CONSTANT  shift 64
	REAL_CONSTANT  shift 65
	ID  shift 87
	CHAR_CONSTANT  shift 72
	'-'  shift 73
	'('  shift 74
	.  error

	exp  goto 123


state 94
	exp : exp NOT_EQ . exp  (52)

	INT_CONSTANT  shift 64
	REAL_CONSTANT  shift 65
	ID  shift 87
	CHAR_CONSTANT  shift 72
	'-'  shift 73
	'('  shift 74
	.  error

	exp  goto 124


state 95
	exp : exp G_EQ . exp  (56)

	INT_CONSTANT  shift 64
	REAL_CONSTANT  shift 65
	ID  shift 87
	CHAR_CONSTANT  shift 72
	'-'  shift 73
	'('  shift 74
	.  error

	exp  goto 125


state 96
	exp : exp L_EQ . exp  (55)

	INT_CONSTANT  shift 64
	REAL_CONSTANT  shift 65
	ID  shift 87
	CHAR_CONSTANT  shift 72
	'-'  shift 73
	'('  shift 74
	.  error

	exp  goto 126


state 97
	statement : exp '=' . exp ';'  (38)

	INT_CONSTANT  shift 64
	REAL_CONSTANT  shift 65
	ID  shift 87
	CHAR_CONSTANT  shift 72
	'-'  shift 73
	'('  shift 74
	.  error

	exp  goto 127


state 98
	exp : exp '!' . exp  (59)

	INT_CONSTANT  shift 64
	REAL_CONSTANT  shift 65
	ID  shift 87
	CHAR_CONSTANT  shift 72
	'-'  shift 73
	'('  shift 74
	.  error

	exp  goto 128


state 99
	exp : exp '>' . exp  (53)

	INT_CONSTANT  shift 64
	REAL_CONSTANT  shift 65
	ID  shift 87
	CHAR_CONSTANT  shift 72
	'-'  shift 73
	'('  shift 74
	.  error

	exp  goto 129


state 100
	exp : exp '<' . exp  (54)

	INT_CONSTANT  shift 64
	REAL_CONSTANT  shift 65
	ID  shift 87
	CHAR_CONSTANT  shift 72
	'-'  shift 73
	'('  shift 74
	.  error

	exp  goto 130


state 101
	exp : exp '+' . exp  (46)

	INT_CONSTANT  shift 64
	REAL_CONSTANT  shift 65
	ID  shift 87
	CHAR_CONSTANT  shift 72
	'-'  shift 73
	'('  shift 74
	.  error

	exp  goto 131


state 102
	exp : exp '-' . exp  (49)

	INT_CONSTANT  shift 64
	REAL_CONSTANT  shift 65
	ID  shift 87
	CHAR_CONSTANT  shift 72
	'-'  shift 73
	'('  shift 74
	.  error

	exp  goto 132


state 103
	exp : exp '*' . exp  (47)

	INT_CONSTANT  shift 64
	REAL_CONSTANT  shift 65
	ID  shift 87
	CHAR_CONSTANT  shift 72
	'-'  shift 73
	'('  shift 74
	.  error

	exp  goto 133


state 104
	exp : exp '/' . exp  (48)

	INT_CONSTANT  shift 64
	REAL_CONSTANT  shift 65
	ID  shift 87
	CHAR_CONSTANT  shift 72
	'-'  shift 73
	'('  shift 74
	.  error

	exp  goto 134


state 105
	exp : exp '%' . exp  (50)

	INT_CONSTANT  shift 64
	REAL_CONSTANT  shift 65
	ID  shift 87
	CHAR_CONSTANT  shift 72
	'-'  shift 73
	'('  shift 74
	.  error

	exp  goto 135


state 106
	exp : exp '[' . exp ']'  (61)

	INT_CONSTANT  shift 64
	REAL_CONSTANT  shift 65
	ID  shift 87
	CHAR_CONSTANT  shift 72
	'-'  shift 73
	'('  shift 74
	.  error

	exp  goto 136


state 107
	exp : exp '.' . ID  (62)

	ID  shift 137
	.  error


state 108
	func_def : ID VOID '(' opt_list_param ')' '{' opt_list_local_var opt_statements '}' .  (16)

	.  reduce 16


state 109
	func_def : ID p_type '(' opt_list_param ')' '{' opt_list_local_var opt_statements '}' .  (15)

	.  reduce 15


state 110
	statement : RETURN '(' exp . ')' ';'  (32)
	exp : exp . '+' exp  (46)
	exp : exp . '*' exp  (47)
	exp : exp . '/' exp  (48)
	exp : exp . '-' exp  (49)
	exp : exp . '%' exp  (50)
	exp : exp . EQ exp  (51)
	exp : exp . NOT_EQ exp  (52)
	exp : exp . '>' exp  (53)
	exp : exp . '<' exp  (54)
	exp : exp . L_EQ exp  (55)
	exp : exp . G_EQ exp  (56)
	exp : exp . AND exp  (57)
	exp : exp . OR exp  (58)
	exp : exp . '!' exp  (59)
	exp : exp . '[' exp ']'  (61)
	exp : exp . '.' ID  (62)

	EQ  shift 91
	OR  shift 92
	AND  shift 93
	NOT_EQ  shift 94
	G_EQ  shift 95
	L_EQ  shift 96
	'!'  shift 98
	'>'  shift 99
	'<'  shift 100
	'+'  shift 101
	'-'  shift 102
	'*'  shift 103
	'/'  shift 104
	'%'  shift 105
	'['  shift 106
	'.'  shift 107
	')'  shift 138
	.  error


state 111
	list_exp : exp .  (45)
	exp : exp . '+' exp  (46)
	exp : exp . '*' exp  (47)
	exp : exp . '/' exp  (48)
	exp : exp . '-' exp  (49)
	exp : exp . '%' exp  (50)
	exp : exp . EQ exp  (51)
	exp : exp . NOT_EQ exp  (52)
	exp : exp . '>' exp  (53)
	exp : exp . '<' exp  (54)
	exp : exp . L_EQ exp  (55)
	exp : exp . G_EQ exp  (56)
	exp : exp . AND exp  (57)
	exp : exp . OR exp  (58)
	exp : exp . '!' exp  (59)
	exp : exp . '[' exp ']'  (61)
	exp : exp . '.' ID  (62)

	EQ  shift 91
	OR  shift 92
	AND  shift 93
	NOT_EQ  shift 94
	G_EQ  shift 95
	L_EQ  shift 96
	'!'  shift 98
	'>'  shift 99
	'<'  shift 100
	'+'  shift 101
	'-'  shift 102
	'*'  shift 103
	'/'  shift 104
	'%'  shift 105
	'['  shift 106
	'.'  shift 107
	')'  reduce 45
	','  reduce 45


state 112
	opt_list_exp : list_exp .  (43)
	list_exp : list_exp . ',' exp  (44)

	','  shift 139
	')'  reduce 43


state 113
	statement : ID '(' opt_list_exp . ')' ';'  (39)
	exp : ID '(' opt_list_exp . ')'  (63)

	')'  shift 140
	.  error


state 114
	statement : WRITE '(' list_exp . ')' ';'  (34)
	list_exp : list_exp . ',' exp  (44)

	')'  shift 141
	','  shift 139
	.  error


state 115
	statement : IF '(' exp . ')' '{' opt_statements '}'  (35)
	statement : IF '(' exp . ')' '{' opt_statements '}' ELSE '{' opt_statements '}'  (36)
	exp : exp . '+' exp  (46)
	exp : exp . '*' exp  (47)
	exp : exp . '/' exp  (48)
	exp : exp . '-' exp  (49)
	exp : exp . '%' exp  (50)
	exp : exp . EQ exp  (51)
	exp : exp . NOT_EQ exp  (52)
	exp : exp . '>' exp  (53)
	exp : exp . '<' exp  (54)
	exp : exp . L_EQ exp  (55)
	exp : exp . G_EQ exp  (56)
	exp : exp . AND exp  (57)
	exp : exp . OR exp  (58)
	exp : exp . '!' exp  (59)
	exp : exp . '[' exp ']'  (61)
	exp : exp . '.' ID  (62)

	EQ  shift 91
	OR  shift 92
	AND  shift 93
	NOT_EQ  shift 94
	G_EQ  shift 95
	L_EQ  shift 96
	'!'  shift 98
	'>'  shift 99
	'<'  shift 100
	'+'  shift 101
	'-'  shift 102
	'*'  shift 103
	'/'  shift 104
	'%'  shift 105
	'['  shift 106
	'.'  shift 107
	')'  shift 142
	.  error


state 116
	statement : READ '(' list_exp . ')' ';'  (33)
	list_exp : list_exp . ',' exp  (44)

	')'  shift 143
	','  shift 139
	.  error

